--- a/Tic-Tac-Toe/tic-tac.css
+++ b/Tic-Tac-Toe/tic-tac.css
@@ -1,13 +1,18 @@
+html {
+    height: 100%;
+}
+
 body {
     background-color: blanchedalmond;
     display: flex;
+    height: 100%;
     justify-content: center;
     align-items: center;
 }
 
 .game-box {
     width: 650px;
-    height: 650px;
+    height: 810px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -15,8 +20,30 @@ body {
 }
 
 .kachel {
-    color: gray;
+    background-color: gray;
     width: 200px;
     height: 200px;
     border-radius: 5%;
+}
+.kachel:hover {
+    cursor: pointer;
+}
+.changing {
+    position: absolute;
+    opacity: 0;
+}
+
+#restart {
+    position: relative;
+    opacity: 100%;
+}
+#restart:hover {
+    cursor: pointer;
+}
+
+.x-button:hover {
+    cursor: pointer;
+}
+.o-button:hover {
+    cursor: pointer;
 }
