--- a/Tic-Tac-Toe/tic-tac.css
+++ b/Tic-Tac-Toe/tic-tac.css
@@ -1,11 +1,11 @@
 html {
-    height: 100%;
+    height: 1000px;
 }
 
 body {
     background-color: blanchedalmond;
     display: flex;
-    height: 100%;
+    height: 1000px;
     justify-content: center;
     align-items: center;
 }
@@ -44,6 +44,15 @@ body {
 .x-button:hover {
     cursor: pointer;
 }
+.x-button2:hover {
+    cursor: pointer;
+}
 .o-button:hover {
     cursor: pointer;
+}
+.o-button2:hover {
+    cursor: pointer;
+}
+.hidden {
+    display: none;
 }
