--- a/Tic-Tac-Toe/tic-tac.css
+++ b/Tic-Tac-Toe/tic-tac.css
@@ -11,6 +11,17 @@ body {
     height: 100%;
     justify-content: center;
 }
+h1 {
+    position: absolute;
+    color: white;
+    right: 270px;
+    top: 590px;
+    color: #ff5050;
+}
+h1:hover {
+    cursor: pointer;
+    color: #ff3333;
+}
 
 p{
     color: #4D94BA;
@@ -22,6 +33,12 @@ p{
 }
 #win-counter-p2 {
     margin-left: 1000px;
+}
+#score1 {
+    color: #FF901F;
+}
+#score2 {
+    color: #FF00AD;
 }
 
 .game-box {
@@ -35,7 +52,7 @@ p{
 }
 
 .kachel {
-    background-color: #4D94BA;
+    background-color: rgba(255, 179, 179, 0.3);
     width: 200px;
     height: 200px;
     border-radius: 5%;
@@ -45,12 +62,12 @@ p{
 }
 .changing {
     position: absolute;
-    opacity: 0;
+    opacity: 0; 
 }
 
 #restart {
     position: relative;
-    opacity: 100%;
+    opacity: 70%;
 }
 #restart:hover {
     cursor: pointer;
